align fix

--- a/src/Form.css
+++ b/src/Form.css
@@ -6,7 +6,7 @@ body {font-family: Arial, Helvetica, sans-serif;
 
 .parent{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: column;
 }
 
@@ -56,7 +56,6 @@ button:hover {
 
 /* Add padding to container elements */
 .container {
-    padding: 16px;
 }
 
 .right{
@@ -73,13 +72,13 @@ button:hover {
     height: 100vh; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     /*background-color: #474e5d; */
-    padding-top: 50px;
 }
 
 /* Modal Content/Box */
 .modal-content {
     float: right;
     margin: auto; /* 5% from the top, 15% from the bottom and centered */
+    margin-right: 2%;
     width: 30%; /* Could be more or less, depending on screen size */
 }
 
